# Coronavirus-NanoForce

./: .gitignore  .gitmodules  README.md
design/: Components.uxf  Entities.uxf  GameModel.uxf  High-Level-Overview.uxf  Levels.uxf  Overview.uxf  Renderers.uxf  Systems.uxf
docs/: Developer-Instructions.md  Entities-Components.md  GameModel.md  High-Level.md  Levels.md  ParticleSystem.md  Renderers.md  Startup-GameLoop.md  Systems.md
src/: CMakeLists.txt  ConfigClient.cpp  Configuration.cpp  Configuration.hpp  ConfigurationPath.hpp  Content.cpp  Content.hpp  ContentKey.hpp  GameModel.cpp  GameModel.hpp  SoundPlayer.cpp  _clang-format  client.developer.json  client.settings.json  main.cpp
src/UIFramework/: Activate.cpp  Activate.hpp  Element.hpp  KeyboardOption.cpp  KeyboardOption.hpp  MenuItem.cpp  MenuItem.hpp  Selection.cpp  Selection.hpp  Text.cpp  Text.hpp
src/assets/audio/: credit.txt
src/assets/fonts/: credit.txt
src/assets/images/: credit.txt
src/assets/music/: credit.txt
src/components/: Age.hpp  AnimatedSprite.hpp  Audio.hpp  Birth.hpp  Bomb.hpp  Bullets.hpp  Collidable.hpp  Component.hpp  Control.hpp  ControlParams.hpp  Damage.hpp  Drag.hpp  Health.hpp  Lifetime.hpp  Momentum.hpp  Orientation.hpp  Position.hpp  Powerup.hpp  Size.cpp  Size.hpp  Sprite.hpp
src/entities/: Bomb.cpp  Bomb.hpp  Bullet.cpp  Bullet.hpp  Entity.cpp  Entity.hpp  Player.cpp  Player.hpp  Powerup.cpp  Powerup.hpp  PowerupBomb.cpp  PowerupBomb.hpp  PowerupRapidFire.cpp  PowerupRapidFire.hpp  PowerupSpreadFire.cpp  PowerupSpreadFire.hpp  Virus.cpp  Virus.hpp  Weapon.cpp  Weapon.hpp  WeaponBomb.cpp  WeaponBomb.hpp  WeaponEmpty.hpp  WeaponGun.cpp  WeaponGun.hpp  WeaponRapidFire.cpp  WeaponRapidFire.hpp  WeaponSpreadFire.cpp  WeaponSpreadFire.hpp
src/levels/: Circle.cpp  Circle.hpp  Level.cpp  Level.hpp  LevelName.hpp  Patient.cpp  Patient.hpp  PetriDish.cpp  PetriDish.hpp  Training.cpp  Training.hpp
src/misc/: ConcurrentQueue.hpp  math.cpp  math.hpp  misc.cpp  misc.hpp  misc.ixx  sha512.cpp  sha512.hpp
src/renderers/: AnimatedSprite.cpp  AnimatedSprite.hpp  Background.cpp  Background.hpp  GameStatus.cpp  GameStatus.hpp  HUD.cpp  HUD.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Sprite.cpp  Sprite.hpp  Virus.cpp  Virus.hpp
src/services/: Configuration.cpp  Configuration.hpp  Content.cpp  KeyboardInput.cpp  KeyboardInput.hpp  MouseInput.cpp  MouseInput.hpp  SoundPlayer.cpp  SoundPlayer.hpp
src/systems/: Age.cpp  Age.hpp  AnimatedSprite.cpp  AnimatedSprite.hpp  Birth.cpp  Birth.hpp  Collision.cpp  Collision.hpp  ControllerInput.cpp  ControllerInput.hpp  Health.cpp  Health.hpp  KeyboardInput.cpp  KeyboardInput.hpp  Lifetime.cpp  Lifetime.hpp  Movement.cpp  Movement.hpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Powerup.cpp  Powerup.hpp  RendererAnimatedSprite.cpp  RendererAnimatedSprite.hpp  RendererParticleSystem.cpp  RendererParticleSystem.hpp  RendererSprite.cpp  RendererSprite.hpp  RendererVirus.cpp  RendererVirus.hpp  System.cpp  System.hpp
src/systems/effects/: CircleExpansionEffect.cpp  CircleExpansionEffect.hpp  ExplosionEffect.cpp  ExplosionEffect.hpp  ParticleEffect.cpp  ParticleEffect.hpp  PlayerStartEffect.cpp  PlayerStartEffect.hpp
src/views/: About.cpp  About.hpp  Credits.cpp  Credits.hpp  Gameplay.cpp  Gameplay.hpp  LevelSelect.cpp  LevelSelect.hpp  MainMenu.cpp  MainMenu.hpp  MenuView.cpp  MenuView.hpp  Settings.cpp  Settings.hpp  View.hpp  ViewState.hpp
